did optional part

--- a/course04/module3-solution/index.html
+++ b/course04/module3-solution/index.html
@@ -29,13 +29,13 @@
 				<div id="collapsable-nav" class="collapse navbar-collapse">
 					<ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
 						<li>
-							<a href="#">Chicken</a>
+							<a href="#chicken">Chicken</a>
 						</li>
 						<li>
-							<a href="#">Beef</a>
+							<a href="#beef">Beef</a>
 						</li>
 						<li>
-							<a href="#">Sushi</a>
+							<a href="#sushi">Sushi</a>
 						</li>
 					</ul>
 				</div>
@@ -45,11 +45,11 @@
 		</nav>
 
 		<div class="container-fluid">
-			<h2 class="text-center">Our Menu</h2>
+			<h2 class="text-center" id="menu">Our Menu</h2>
 			<div class="row">
-				<div class="col-xs-12">
+				<div class="col-md-4 col-sm-6 col-xs-12">
 					<section>
-						<h3 class="text-center">Chicken</h3>
+						<h3 class="text-center" id="chicken">Chicken</h3>
 						<p>Blandit volutpat gubergren an eam. Cetero oportere ea mel, at luptatum senserit vel. Tincidunt scribentur ad sed. Soluta impedit duo in, cum ex nonumy periculis. Atomorum praesent vis an, pri sonet constituam et. At usu unum splendide posidonium.</p>
 
 						<p>Cu vel temporibus cotidieque. Ullum eripuit quo te, ea sed ancillae necessitatibus. Case officiis in usu. Ignota latine accommodare duo id, pro everti tractatos id.</p>
@@ -57,6 +57,38 @@
 						<p>Eum eu probo dicant. Ius dicta oportere ne, diceret bonorum utroque id usu. Cu ullamcorper interpretaris vel. Sed no nulla paulo intellegebat, prima nobis nam te, ne has causae alterum reformidans. Mel eu delenit dissentias, ut est posse commune mediocritatem, mel te sonet errem. Ea eum tacimates volutpat, ex ullum dissentiunt comprehensam mei, at pro sumo assum aliquando.</p>
 
 						<p>An qui malis placerat vivendum, per soluta officiis consetetur ea. Nam luptatum reformidans no. An clita omittantur vel, tale inani nec in, ad eam salutatus incorrupte eloquentiam. Cu vel adhuc verear. Et mea aeterno aliquam singulis.</p>	
+
+						<a href="#menu">Back to Top</a>
+					</section>
+				</div>
+
+				<div class="col-md-4 col-sm-6 col-xs-12">
+					<section>
+						<h3 class="text-center" id="beef">Beef</h3>
+						<p>Blandit volutpat gubergren an eam. Cetero oportere ea mel, at luptatum senserit vel. Tincidunt scribentur ad sed. Soluta impedit duo in, cum ex nonumy periculis. Atomorum praesent vis an, pri sonet constituam et. At usu unum splendide posidonium.</p>
+
+						<p>Cu vel temporibus cotidieque. Ullum eripuit quo te, ea sed ancillae necessitatibus. Case officiis in usu. Ignota latine accommodare duo id, pro everti tractatos id.</p>
+
+						<p>Eum eu probo dicant. Ius dicta oportere ne, diceret bonorum utroque id usu. Cu ullamcorper interpretaris vel. Sed no nulla paulo intellegebat, prima nobis nam te, ne has causae alterum reformidans. Mel eu delenit dissentias, ut est posse commune mediocritatem, mel te sonet errem. Ea eum tacimates volutpat, ex ullum dissentiunt comprehensam mei, at pro sumo assum aliquando.</p>
+
+						<p>An qui malis placerat vivendum, per soluta officiis consetetur ea. Nam luptatum reformidans no. An clita omittantur vel, tale inani nec in, ad eam salutatus incorrupte eloquentiam. Cu vel adhuc verear. Et mea aeterno aliquam singulis.</p>	
+
+						<a href="#menu">Back to Top</a>
+					</section>
+				</div>
+
+				<div class="col-md-4 col-sm-12 col-xs-12">
+					<section>
+						<h3 class="text-center" id="sushi">Sushi</h3>
+						<p>Blandit volutpat gubergren an eam. Cetero oportere ea mel, at luptatum senserit vel. Tincidunt scribentur ad sed. Soluta impedit duo in, cum ex nonumy periculis. Atomorum praesent vis an, pri sonet constituam et. At usu unum splendide posidonium.</p>
+
+						<p>Cu vel temporibus cotidieque. Ullum eripuit quo te, ea sed ancillae necessitatibus. Case officiis in usu. Ignota latine accommodare duo id, pro everti tractatos id.</p>
+
+						<p>Eum eu probo dicant. Ius dicta oportere ne, diceret bonorum utroque id usu. Cu ullamcorper interpretaris vel. Sed no nulla paulo intellegebat, prima nobis nam te, ne has causae alterum reformidans. Mel eu delenit dissentias, ut est posse commune mediocritatem, mel te sonet errem. Ea eum tacimates volutpat, ex ullum dissentiunt comprehensam mei, at pro sumo assum aliquando.</p>
+
+						<p>An qui malis placerat vivendum, per soluta officiis consetetur ea. Nam luptatum reformidans no. An clita omittantur vel, tale inani nec in, ad eam salutatus incorrupte eloquentiam. Cu vel adhuc verear. Et mea aeterno aliquam singulis.</p>	
+
+						<a href="#menu">Back to Top</a>
 					</section>
 				</div>
 			</div>
